--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "readme.md"
 requires-python = ">=3.14"
 dependencies = [
     "exifread>=3.5.1",
+    "opencv-python>=4.13.0.92",
     "plyer>=2.1.0",
 ]
 
