--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "hdr-merge-master"
-version = "0.1.0"
-description = "Add your description here"
+version = "1.3.0"
+description = "A script that uses Blender's compositor to reliably merge exposure brackets to a 32-bit EXR file. "
 readme = "readme.md"
 requires-python = ">=3.14"
 dependencies = [
