--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "hdr-merge-master"
 version = "1.3.0"
 description = "A script that uses Blender's compositor to reliably merge exposure brackets to a 32-bit EXR file. "
 readme = "readme.md"
-requires-python = "==3.13.12"
+requires-python = ">=3.13"
 dependencies = [
     "exifread>=3.5.1",
     "opencv-python>=4.13.0.92",
